# clippy-awakens

./: .gitignore  CLAUDE.md  MIT-LICENSE.txt  README.md  build.sh  index.html  package.json
hooks/claude-code/: notify.py  on_error.py  on_notification.py  on_session_end.py  on_stop.py  settings.example.json
plans/260228-clippy-awakens/: phase-01-tauri-scaffolding.md  phase-02-transparent-overlay.md  phase-03-clippy-webview.md  phase-04-event-mapping.md  phase-05-http-server.md  phase-06-sound-playback.md  phase-07-system-tray.md  phase-08-integration-build.md  plan.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agents.rs  config.rs  events.rs  main.rs  server.rs  sounds.rs  tracker.rs  tray.rs
ui/: clippy-bridge-test.js  clippy-bridge.js  clippy-test.js  index.html
